--- a/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/paper-dashboard/_sidebar-and-main-panel.scss
@@ -20,6 +20,9 @@
   z-index: 1030;
   border-right: 1px solid #ddd;
 
+  li {
+    margin-left: 25px;
+  }
   .sidebar-wrapper {
     position: relative;
     height: calc(100vh - 75px);
@@ -77,7 +80,7 @@
 
       > a {
         margin: 10px 15px 0;
-        color: $white-color;
+        color: #46494a;
         display: block;
         text-decoration: none;
         position: relative;
@@ -86,7 +89,8 @@
         font-size: 12px;
         padding: 10px 8px;
         line-height: 30px;
-        opacity: 0.7;
+        font-weight: 700;
+        opacity: 0.5;
       }
 
       .nav > li > a {
@@ -101,6 +105,7 @@
       &:hover:not(.active) > a,
       &:focus:not(.active) > a {
         opacity: 1;
+        font-weight: 900;
       }
     }
 
@@ -111,7 +116,6 @@
       line-height: 30px;
       width: 34px;
       text-align: center;
-      color: $opacity-5;
       position: relative;
     }
 
@@ -150,17 +154,22 @@
     }
   }
 
-  .sidebar-profile {
-    background-color: red;
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    z-index: 4;
-  }
   .logo {
     position: relative;
     padding: 7px $padding-base-horizontal;
     z-index: 4;
+
+    .sidebar-profile {
+      height: 300px;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+
+      p {
+        color: #46494a;
+        opacity: 0.9;
+      }
+    }
 
     a.logo-mini,
     a.logo-normal {
@@ -180,6 +189,8 @@
       display: block;
       opacity: 1;
       padding: 11px 0 8px;
+      color: #51bcda;
+      font-weight: 900;
       @include transform-translate-x(0px);
     }
 
@@ -190,7 +201,7 @@
       right: 15px;
       height: 1px;
       width: calc(100% - 30px);
-      background-color: $opacity-5;
+      background-color: #51bcda;
     }
 
     p {
@@ -299,7 +310,7 @@
   position: relative;
   float: right;
   width: $sidebar-width;
-  background-color: #f4f3ef;
+  background-color: #e1f4f1;
 
   @include transition(0.5s, cubic-bezier(0.685, 0.0473, 0.346, 1));
 
