--- a/src/assets/scss/paper-dashboard.scss
+++ b/src/assets/scss/paper-dashboard.scss
@@ -1,22 +1,5 @@
-/*!
-
- =========================================================
- * Paper Dashboard React - v1.2.0 based on Paper Dashboard 2 - v2.0.0
- =========================================================
-
- * Product Page: https://www.creative-tim.com/product/paper-dashboard-2
- * Copyright 2020 Creative Tim (http://www.creative-tim.com)
-
- * Designed by www.invisionapp.com Coded by www.creative-tim.com
-
- =========================================================
-
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
- */
-
-@import 'paper-dashboard/variables';
-@import 'paper-dashboard/mixins';
+@import "paper-dashboard/variables";
+@import "paper-dashboard/mixins";
 
 // Plugins CSS
 @import "paper-dashboard/plugins/plugin-animate-bootstrap-notify";
@@ -28,7 +11,6 @@
 @import "paper-dashboard/typography";
 @import "paper-dashboard/misc";
 @import "paper-dashboard/checkboxes-radio";
-
 
 // components
 @import "paper-dashboard/navbar";
@@ -54,3 +36,4 @@
 
 // html to react differences
 @import "paper-dashboard/react/react-differences.scss";
+// Import Bootstrap and its default variables
