Adicionando tela register - toast file - axios file

--- a/src/assets/scss/paper-dashboard.scss
+++ b/src/assets/scss/paper-dashboard.scss
@@ -33,6 +33,7 @@
 @import "paper-dashboard/cards/card-stats";
 
 @import "paper-dashboard/responsive";
+@import "paper-dashb.scss";
 
 // html to react differences
 @import "paper-dashboard/react/react-differences.scss";
