--- a/src/assets/scss/paper-dashb.scss
+++ b/src/assets/scss/paper-dashb.scss
@@ -1,3 +1,7 @@
+.input-error-text {
+  color: red;
+}
+
 .color-white {
   color: black !important;
 }
@@ -39,5 +43,32 @@
     opacity: 0.8;
     font-weight: 0;
     font-size: 14px;
+  }
+}
+
+.form-control .radio-custom {
+  background-color: #66c4de;
+  border-radius: 15px;
+  color: white;
+  font-size: 16px;
+  font-weight: 900;
+
+  padding: 20px;
+  width: 49%;
+  text-align: center;
+  float: left;
+}
+
+@media screen and (max-width: 475px) {
+  .form-control .radio-custom {
+    width: 98%;
+    height: 100px;
+  }
+}
+
+@media screen and (min-width: 476px) {
+  .form-control .radio-custom {
+    width: 48.5%;
+    height: 180px;
   }
 }
