--- a/src/assets/scss/paper-dashboard/_navbar.scss
+++ b/src/assets/scss/paper-dashboard/_navbar.scss
@@ -305,3 +305,9 @@
 .bg-white {
   background-color: $white-color !important;
 }
+
+.title-demo-nav{
+   color: rgb(240, 108, 196)!important;
+   font-weight: 600;
+
+}
